--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest --watch",
-    "test:e2e": "playwright test"
+    "test:e2e": "playwright test --grep-invert '<do_not_run_file.spec.js>' && playwright test e2e/api --project=chromium"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -17,6 +17,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
+    "@testing-library/user-event": "^14.4.3",
     "axios": "^1.1.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
