--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest --watch",
     "test:e2e": "playwright test --grep-invert '<do_not_run_file.spec.js>' && playwright test e2e/api --project=chromium",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test-storybook": "test-storybook"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
