--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "jest-environment-jsdom": "^29.2.2",
     "msw": "^0.48.2",
     "msw-storybook-addon": "^1.6.3",
-    "storybook-addon-next": "^1.6.10"
+    "storybook-addon-next": "^1.6.10",
+    "typescript": "4.9.3"
   },
   "msw": {
     "workerDirectory": "public"
