--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.12",
     "@testing-library/user-event": "^14.4.3",
+    "@types/lodash.shuffle": "^4.2.7",
     "axios": "^1.1.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
+    "lodash.shuffle": "^4.2.0",
     "next": "13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -43,6 +45,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.3",
     "babel-loader": "^8.3.0",
     "eslint-plugin-storybook": "^0.6.7",
     "jest": "^29.2.2",
