--- a/package.json
+++ b/package.json
@@ -45,14 +45,16 @@
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.2.3",
+    "@types/jest": "^29.2.4",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "babel-loader": "^8.3.0",
     "eslint-plugin-storybook": "^0.6.7",
-    "jest": "^29.2.2",
+    "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.2.2",
     "msw": "^0.48.2",
     "msw-storybook-addon": "^1.6.3",
     "storybook-addon-next": "^1.6.10",
+    "ts-jest": "^29.0.3",
     "typescript": "4.9.3"
   },
   "msw": {
