--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,13 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "types": ["node", "jest", "@testing-library/jest-dom"],
+
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "__tests__/index.test.js"
+  ],
   "exclude": ["node_modules"]
 }
